edit nav sections

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="replastering.html">Replastering</a></li>
-        <li><a href="remodeling.html">Remodeling</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
       </ul>
     </nav>
