--- a/index.html
+++ b/index.html
@@ -1,72 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pool Replastering & Remodeling</title>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pool Replastering & Remodeling</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <!-- NAVBAR -->
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <img src="images/logo.png" alt="pool" />
+          <div class="logo-text">Pacific Edge Pools</div>
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
+        </ul>
+      </nav>
+    </header>
 
-</head>
-<body>
-  <!-- NAVBAR -->
-  <header>
-    <nav class="navbar">
-
-      <div class="logo">
-        <img src="images/logo.png" alt="pool">
-        <div class="logo-text">Pacific Edge Pools</div>
+    <!-- HERO SECTION -->
+    <section class="hero" style="background-image: url('images/hero.png')">
+      <div class="hero-content">
+        <h1>Premium Pool Replastering & Remodeling</h1>
+        <p>
+          Transform your old, worn-out pool into a fresh, modern, beautiful
+          oasis.
+        </p>
+        <a href="quote.html" class="hero-button">Get a Free Quote</a>
       </div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
-      </ul>
-    </nav>
-  </header>
+    </section>
 
-  <!-- HERO SECTION -->
-  <section class="hero" style="background-image: url('images/hero.png');">
-    <div class="hero-content">
-      <h1>Premium Pool Replastering & Remodeling</h1>
-      <p>Transform your old, worn-out pool into a fresh, modern, beautiful oasis.</p>
-      <a href="quote.html" class="hero-button">Get a Free Quote</a>
-    </div>
-  </section>
+    <!-- SERVICES SECTION -->
 
-  <!-- SERVICES SECTION -->
-  <section class="services">
-    <h2>Our Services</h2>
-    <div class="services-grid">
+    <!-- CTA BANNER -->
+    <section class="cta-banner">
+      <h2>Ready to Transform Your Pool?</h2>
+      <a href="quote.html" class="cta-btn">Get a Free Quote</a>
+    </section>
+    <section class="services">
+      <h2>Our Services</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <img src="images/remodeling.jpg" alt="Pool Remodeling" />
+          <h3>Pool Remodeling</h3>
+          <p>
+            Transform your pool with modern upgrades, new features, and a fresh
+            new look.
+          </p>
+          <a href="remodeling.html">Learn More →</a>
+        </div>
 
-      <div class="service-card">
-        <img src="images/replaster.jpg" alt="Pool Replastering">
-        <h3>Pool Replastering</h3>
-        <p>High-quality finishes including white, quartz, and pebble surfaces that last years.</p>
-        <a href="replastering.html">Learn More →</a>
+        <div class="service-card">
+          <img src="images/plastering.jpg" alt="Pool Plastering" />
+          <h3>Pool Plastering</h3>
+          <p>
+            Quality white, quartz, or pebble plaster finishes for a brand-new
+            surface.
+          </p>
+          <a href="plastering.html">Learn More →</a>
+        </div>
+
+        <div class="service-card">
+          <img src="images/resurfacing.jpg" alt="Resurfacing" />
+          <h3>Resurfacing</h3>
+          <p>
+            Restore smoothness and durability with professional resurfacing
+            services.
+          </p>
+          <a href="resurfacing.html">Learn More →</a>
+        </div>
+
+        <div class="service-card">
+          <img src="images/tile-coping.jpg" alt="Tile and Coping" />
+          <h3>Tile & Coping</h3>
+          <p>
+            Upgrade your pool's edge with stylish coping and modern tile
+            designs.
+          </p>
+          <a href="tile-coping.html">Learn More →</a>
+        </div>
+
+        <div class="service-card">
+          <img src="images/spa-remodeling.jpg" alt="Spa Remodeling" />
+          <h3>Spa Remodeling</h3>
+          <p>Refresh or completely redesign your spa for maximum relaxation.</p>
+          <a href="spa.html">Learn More →</a>
+        </div>
       </div>
+    </section>
 
-      <div class="service-card">
-        <img src="images/remodeling.jpg" alt="Pool Remodeling">
-        <h3>Pool Remodeling</h3>
-        <p>Tile, coping, lighting, decking, and full renovations to modernize your pool.</p>
-        <a href="remodeling.html">Learn More →</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- CTA BANNER -->
-  <section class="cta-banner">
-    <h2>Ready to Transform Your Pool?</h2>
-    <a href="quote.html" class="cta-btn">Get a Free Quote</a>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 Your Pool Company. All rights reserved.</p>
-  </footer>
-</body>
+    <!-- FOOTER -->
+    <footer>
+      <p>© 2025 Your Pool Company. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
