--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <p>© 2025 Your Pool Company. All rights reserved.</p>
+      <p>© 2025 Pacific Edge Pools. All rights reserved.</p>
     </footer>
   </body>
 </html>
