add about us preview in homepage

--- a/index.html
+++ b/index.html
@@ -51,62 +51,81 @@
       <h2>Our Services</h2>
       <div class="services-grid">
         <div class="service-card">
-        
           <div class="service-card-content">
-          <img src="images/remodeling.png" alt="Pool Remodeling" />
-          <h3>Pool Remodeling</h3>
-          <p>
-            Transform your pool with modern upgrades, new features, and a fresh
-            new look.
-          </p>
-          <a href="remodeling.html">Learn More →</a>
+            <img src="images/remodeling.png" alt="Pool Remodeling" />
+            <h3>Pool Remodeling</h3>
+            <p>
+              Transform your pool with modern upgrades, new features, and a
+              fresh new look.
+            </p>
+            <a href="remodeling.html">Learn More →</a>
           </div>
         </div>
 
         <div class="service-card">
           <div class="service-card-content">
-          <img src="images/plastering.png" alt="Pool Plastering" />
-          <h3>Pool Plastering</h3>
-          <p>
-            Quality white, quartz, or pebble plaster finishes for a brand-new
-            surface.
-          </p>
-          <a href="plastering.html">Learn More →</a>
-        </div>
-        </div>
-
-        <div class="service-card">
-          <div class="service-card-content">
-          <img src="images/resurfacing.jpeg" alt="Resurfacing" />
-          <h3>Resurfacing</h3>
-          <p>
-            Restore smoothness and durability with professional resurfacing
-            services.
-          </p>
-          <a href="resurfacing.html">Learn More →</a>
+            <img src="images/plastering.png" alt="Pool Plastering" />
+            <h3>Pool Plastering</h3>
+            <p>
+              Quality white, quartz, or pebble plaster finishes for a brand-new
+              surface.
+            </p>
+            <a href="plastering.html">Learn More →</a>
           </div>
         </div>
 
         <div class="service-card">
           <div class="service-card-content">
-          <img src="images/tile-coping.png" alt="Tile and Coping" />
-          <h3>Tile & Coping</h3>
-          <p>
-            Upgrade your pool's edge with stylish coping and modern tile
-            designs.
-          </p>
-          <a href="tile-coping.html">Learn More →</a>
+            <img src="images/resurfacing.jpeg" alt="Resurfacing" />
+            <h3>Resurfacing</h3>
+            <p>
+              Restore smoothness and durability with professional resurfacing
+              services.
+            </p>
+            <a href="resurfacing.html">Learn More →</a>
           </div>
         </div>
 
         <div class="service-card">
           <div class="service-card-content">
-          <img src="images/spa-remodeling.jpeg" alt="Spa Remodeling" />
-          <h3>Spa Remodeling</h3>
-          <p>Refresh or completely redesign your spa for maximum relaxation.</p>
-          <a href="spa.html">Learn More →</a>
+            <img src="images/tile-coping.png" alt="Tile and Coping" />
+            <h3>Tile & Coping</h3>
+            <p>
+              Upgrade your pool's edge with stylish coping and modern tile
+              designs.
+            </p>
+            <a href="tile-coping.html">Learn More →</a>
           </div>
         </div>
+
+        <div class="service-card">
+          <div class="service-card-content">
+            <img src="images/spa-remodeling.jpeg" alt="Spa Remodeling" />
+            <h3>Spa Remodeling</h3>
+            <p>
+              Refresh or completely redesign your spa for maximum relaxation.
+            </p>
+            <a href="spa.html">Learn More →</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about-preview">
+      <div class="about-container">
+        <h2>Why Homeowners Trust Pacific Edge Pools</h2>
+
+        <p>
+          With over a decade of experience in high-end pool construction and
+          plastering, Pacific Edge Pools brings luxury-grade craftsmanship to
+          homeowners across the Central Valley. Our team combines hands-on
+          expertise from elite markets like Carmel and Atherton with
+          professional project management backed by a degree from San Jose
+          State. We believe in honesty, clear communication, and delivering
+          remodels that stand the test of time. Your pool is our reputation —
+          and we treat it that way.
+        </p>
+
+        <a class="about-btn" href="about.html">Learn More →</a>
       </div>
     </section>
 
