add service areas

--- a/index.html
+++ b/index.html
@@ -122,7 +122,31 @@
         </p>
       
     </section>
-    
+    <section class="service-areas">
+      <div class="service-areas-container">
+        <h2>Areas We Serve</h2>
+
+        <p>
+          Pacific Edge Pools proudly provides pool remodeling and replastering
+          services throughout the Central Valley and surrounding communities.
+        </p>
+
+        <ul class="areas-list">
+          <li><a href="modesto-pool-remodeling.html">Modesto</a></li>
+          <li><a href="turlock-pool-remodeling.html">Turlock</a></li>
+          <li><a href="patterson-pool-remodeling.html">Patterson</a></li>
+          <li><a href="ceres-pool-remodeling.html">Ceres</a></li>
+          <li><a href="tracy-pool-remodeling.html">Tracy</a></li>
+          <li><a href="manteca-pool-remodeling.html">Manteca</a></li>
+          <li><a href="stockton-pool-remodeling.html">Stockton</a></li>
+          <li><a href="los-banos-pool-remodeling.html">Los Banos</a></li>
+          <li><a href="merced-pool-remodeling.html">Merced</a></li>
+          <li><a href="sacramento-pool-remodeling.html">Sacramento</a></li>
+          <li><a href="elk-grove-pool-remodeling.html">Elk Grove</a></li>
+        </ul>
+      </div>
+    </section>
+
     <section class="cta-banner">
       <h2>Ready to Transform Your Pool?</h2>
       <a href="quote.html" class="cta-btn">Get a Free Quote</a>
