edit order and add trust us

--- a/index.html
+++ b/index.html
@@ -106,6 +106,51 @@
         </div>
       </div>
     </section>
+
+    <!-- WHY CHOOSE US -->
+    <section class="why-choose-us" id="why-us">
+        <h2>Why Choose Pacific Edge Pools</h2>
+        <p class="why-intro">
+          We combine luxury-level craftsmanship with honest communication and
+          dependable project management—so your pool remodel is done right the first time.
+        </p>
+
+        <div class="why-grid">
+          <div class="why-card">
+            <h3>Licensed & Insured</h3>
+            <p>
+              Fully licensed California contractor (CA License #1144387),
+              bonded and insured for your peace of mind.
+            </p>
+          </div>
+
+          <div class="why-card">
+            <h3>High-End Experience</h3>
+            <p>
+              Over a decade of hands-on experience working in elite markets like
+              Carmel and Atherton—bringing premium results to the Central Valley.
+            </p>
+          </div>
+
+          <div class="why-card">
+            <h3>Quality That Lasts</h3>
+            <p>
+              We use proven materials, precise craftsmanship, and industry best practices
+              to ensure long-lasting finishes and durability.
+            </p>
+          </div>
+
+          <div class="why-card">
+            <h3>Clear Communication</h3>
+            <p>
+              No surprises. We provide transparent timelines, clear expectations,
+              and responsive communication throughout your project.
+            </p>
+          </div>
+        </div>
+    </section>
+
+    <!-- ABOUT PREVIEW SECTION -->
     <section class="about-preview">
       <div class="about-container">
         <h2>Why Homeowners Trust Pacific Edge Pools</h2>
@@ -120,8 +165,10 @@
           remodels that stand the test of time. Your pool is our reputation —
           and we treat it that way.
         </p>
-      
+      </div>
     </section>
+
+    <!-- SERVICE AREAS SECTION -->
     <section class="service-areas">
       <div class="service-areas-container">
         <h2>Areas We Serve</h2>
@@ -147,13 +194,15 @@
       </div>
     </section>
 
+    <!-- CALL TO ACTION BANNER -->
     <section class="cta-banner">
       <h2>Ready to Transform Your Pool?</h2>
       <a href="quote.html" class="cta-btn">Get a Free Quote</a>
     </section>
+
     <!-- FOOTER -->
     <footer>
-      <p>© 2025 Pacific Edge Pools. All rights reserved.</p>
+      <p>© 2026 Pacific Edge Pools. All rights reserved.</p>
     </footer>
   </body>
 </html>
