--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pool Replastering & Remodeling</title>
+    <title>Pool Replastering & Remodeling || Pacific Edge Pools</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="images/logo.png" alt="pool" />
+          <img src="images/logo.png" alt="pool remodeling project" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
@@ -41,10 +41,16 @@
     </section>
 
     <!-- SERVICES SECTION -->
-    
-    </section>
+
     <section class="services">
       <h2>Our Services</h2>
+      
+      <p class="services-intro">
+        We specialize in pool remodeling, replastering, resurfacing, tile &
+        coping, and spa renovations for homeowners throughout the Central
+        Valley.
+      </p>
+
       <div class="services-grid">
         <div class="service-card">
           <div class="service-card-content">
@@ -109,45 +115,46 @@
 
     <!-- WHY CHOOSE US -->
     <section class="why-choose-us" id="why-us">
-        <h2>Why Choose Pacific Edge Pools</h2>
-        <p class="why-intro">
-          We combine luxury-level craftsmanship with honest communication and
-          dependable project management—so your pool remodel is done right the first time.
-        </p>
+      <h2>Why Choose Pacific Edge Pools</h2>
+      <p class="why-intro">
+        We combine luxury-level craftsmanship with honest communication and
+        dependable project management—so your pool remodel is done right the
+        first time.
+      </p>
 
-        <div class="why-grid">
-          <div class="why-card">
-            <h3>Licensed & Insured</h3>
-            <p>
-              Fully licensed California contractor (CA License #1144387),
-              bonded and insured for your peace of mind.
-            </p>
-          </div>
-
-          <div class="why-card">
-            <h3>High-End Experience</h3>
-            <p>
-              Over a decade of hands-on experience working in elite markets like
-              Carmel and Atherton—bringing premium results to the Central Valley.
-            </p>
-          </div>
-
-          <div class="why-card">
-            <h3>Quality That Lasts</h3>
-            <p>
-              We use proven materials, precise craftsmanship, and industry best practices
-              to ensure long-lasting finishes and durability.
-            </p>
-          </div>
-
-          <div class="why-card">
-            <h3>Clear Communication</h3>
-            <p>
-              No surprises. We provide transparent timelines, clear expectations,
-              and responsive communication throughout your project.
-            </p>
-          </div>
+      <div class="why-grid">
+        <div class="why-card">
+          <h3>Licensed & Insured</h3>
+          <p>
+            Fully licensed California contractor (CA License #1144387), bonded
+            and insured for your peace of mind.
+          </p>
         </div>
+
+        <div class="why-card">
+          <h3>High-End Experience</h3>
+          <p>
+            Over a decade of hands-on experience working in elite markets like
+            Carmel and Atherton—bringing premium results to the Central Valley.
+          </p>
+        </div>
+
+        <div class="why-card">
+          <h3>Quality That Lasts</h3>
+          <p>
+            We use proven materials, precise craftsmanship, and industry best
+            practices to ensure long-lasting finishes and durability.
+          </p>
+        </div>
+
+        <div class="why-card">
+          <h3>Clear Communication</h3>
+          <p>
+            No surprises. We provide transparent timelines, clear expectations,
+            and responsive communication throughout your project.
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- ABOUT PREVIEW SECTION -->
@@ -165,6 +172,7 @@
           remodels that stand the test of time. Your pool is our reputation —
           and we treat it that way.
         </p>
+        <a href="about.html" class="about-btn">Learn More About Us</a>
       </div>
     </section>
 
