add services files

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="services">
       <h2>Our Services</h2>
-      
+
       <p class="services-intro">
         We specialize in pool remodeling, replastering, resurfacing, tile &
         coping, and spa renovations for homeowners throughout the Central
@@ -60,7 +60,7 @@
               Transform your pool with modern upgrades, new features, and a
               fresh new look.
             </p>
-            <a href="remodeling.html">Learn More →</a>
+            <a href="services/remodeling.html">Learn More →</a>
           </div>
         </div>
 
@@ -72,7 +72,7 @@
               Quality white, quartz, or pebble plaster finishes for a brand-new
               surface.
             </p>
-            <a href="plastering.html">Learn More →</a>
+            <a href="services/plastering.html">Learn More →</a>
           </div>
         </div>
 
@@ -84,7 +84,7 @@
               Restore smoothness and durability with professional resurfacing
               services.
             </p>
-            <a href="resurfacing.html">Learn More →</a>
+            <a href="services/resurfacing.html">Learn More →</a>
           </div>
         </div>
 
@@ -96,7 +96,7 @@
               Upgrade your pool's edge with stylish coping and modern tile
               designs.
             </p>
-            <a href="tile-coping.html">Learn More →</a>
+            <a href="services/tile-coping.html">Learn More →</a>
           </div>
         </div>
 
@@ -107,7 +107,7 @@
             <p>
               Refresh or completely redesign your spa for maximum relaxation.
             </p>
-            <a href="spa.html">Learn More →</a>
+            <a href="services/spa.html">Learn More →</a>
           </div>
         </div>
       </div>
