edit services images

--- a/services/remodeling.html
+++ b/services/remodeling.html
@@ -14,7 +14,10 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="/images/logo.png" alt="pool remodeling project" />
+          <img
+            src="/images/logo.png"
+            alt="pool remodeling project in the bay area and Central Valleys"
+          />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
@@ -33,7 +36,12 @@
         Transform your outdated pool into a modern, beautiful backyard
         centerpiece.
       </p>
-      <img src="/images/remodeling.png" alt="Pool Remodeling" />
+      <div class="service-hero-image">
+        <img
+          src="/images/remodeling.png"
+          alt="Pool Remodeling in the Bay Area and Central Valley"
+        />
+      </div>
     </section>
 
     <section class="service-content">
