--- a/services/resurfacing.html
+++ b/services/resurfacing.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="/images/logo.png" alt="pool remodeling project" />
+          <img src="/images/logo.png" alt="pool remodeling project in the bay area and Central Valley" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
@@ -28,7 +28,12 @@
     <section class="service-hero">
       <h1>Pool Resurfacing</h1>
       <p>Restore the beauty, comfort, and durability of your pool.</p>
-      <img src="/images/resurfacing.jpeg" alt="Pool Resurfacing" />
+      <div class="service-hero-image">
+        <img
+          src="/images/resurfacing.jpeg"
+          alt="Pool Resurfacing in the Bay Area and Central Valley"
+        />
+      </div>
     </section>
 
     <!-- CONTENT -->
