--- a/services/spa.html
+++ b/services/spa.html
@@ -12,7 +12,10 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="/images/logo.png" alt="pool remodeling project" />
+          <img
+            src="/images/logo.png"
+            alt="pool remodeling project in the bay area and Central Valley"
+          />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
@@ -28,7 +31,13 @@
     <section class="service-hero">
       <h1>Spa Remodeling</h1>
       <p>Transform your spa into a modern, relaxing retreat.</p>
-      <img src="/images/spa-remodeling.png" alt="Spa Remodeling" />
+
+      <div class="service-hero-image">
+        <img
+          src="/images/spa-remodeling.jpeg"
+          alt="Spa Remodeling in the Bay Area and Central Valley"
+        />
+      </div>
     </section>
 
     <!-- CONTENT -->
