--- a/services/plastering.html
+++ b/services/plastering.html
@@ -14,7 +14,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="/images/logo.png" alt="pool remodeling project" />
+          <img src="/images/logo.png" alt="pool remodeling project in the bay area and Central Valley" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
@@ -31,7 +31,9 @@
         Durable, smooth finishes that protect your pool and elevate its
         appearance.
       </p>
-      <img src="/images/plastering.png" alt="Pool Plastering" />
+      <div class="service-hero-image">
+        <img src="/images/plastering.png" alt="Pool Plastering in the Bay Area and Central Valley" />
+      </div>
     </section>
 
     <section class="service-content">
