--- a/services/tile-coping.html
+++ b/services/tile-coping.html
@@ -14,7 +14,10 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="/images/logo.png" alt="pool remodeling project" />
+          <img
+            src="/images/logo.png"
+            alt="pool remodeling project in the bay area and Central Valley"
+          />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
@@ -29,6 +32,13 @@
     <section class="service-hero">
       <h1>Tile & Coping</h1>
       <p>Precision-installed details that define the look of your pool.</p>
+
+      <div class="service-hero-image">
+        <img
+          src="/images/tile-coping.png"
+          alt="Tile and Coping in the Bay Area and Central Valleys"
+        />
+      </div>
     </section>
 
     <section class="service-content">
@@ -55,7 +65,7 @@
     <!-- CTA -->
     <section class="cta-banner">
       <h2>Ready to Upgrade Your Pool's Tile & Coping?</h2>
-      <a href="quote.html" class="cta-btn">Get a Free Quote</a> 
+      <a href="quote.html" class="cta-btn">Get a Free Quote</a>
     </section>
 
     <footer class="footer">
