--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
 
     <link rel="stylesheet" href="/styles/styles.css" />
@@ -29,7 +33,10 @@
     </header>
 
     <!-- HERO SECTION -->
-    <section class="hero" style="background-image: url('images/hero.png')">
+    <section
+      class="hero"
+      style="background-image: url(&quot;images/hero.png&quot;)"
+    >
       <div class="hero-content">
         <h1>Premium Pool Replastering & Remodeling</h1>
         <p>
@@ -114,66 +121,42 @@
     </section>
 
     <!-- WHY CHOOSE US -->
-    <section class="why-choose-us" id="why-us">
+    <section class="why-choose-us-icons">
       <h2>Why Choose Pacific Edge Pools</h2>
-      <p class="why-intro">
-        We combine luxury-level craftsmanship with honest communication and
-        dependable project management—so your pool remodel is done right the
-        first time.
-      </p>
 
-      <div class="why-grid">
-        <div class="why-card">
-          <h3>Licensed & Insured</h3>
-          <p>
-            Fully licensed California contractor (CA License #1144387), bonded
-            and insured for your peace of mind.
-          </p>
+      <div class="icon-grid">
+        <div class="icon-card">
+          <i class="fa-solid fa-pen-ruler"></i>
+          <h3>Custom Pool Design</h3>
         </div>
 
-        <div class="why-card">
-          <h3>High-End Experience</h3>
-          <p>
-            Over a decade of hands-on experience working in elite markets like
-            Carmel and Atherton—bringing premium results to the Central Valley.
-          </p>
+        <div class="icon-card">
+          <i class="fa-solid fa-hammer"></i>
+          <h3>Expert Craftsmanship</h3>
         </div>
 
-        <div class="why-card">
-          <h3>Quality That Lasts</h3>
-          <p>
-            We use proven materials, precise craftsmanship, and industry best
-            practices to ensure long-lasting finishes and durability.
-          </p>
+        <div class="icon-card">
+          <i class="fa-solid fa-calendar-check"></i>
+          <h3>Reliable Timelines</h3>
         </div>
 
-        <div class="why-card">
+        <div class="icon-card">
+          <i class="fa-solid fa-comments"></i>
           <h3>Clear Communication</h3>
-          <p>
-            No surprises. We provide transparent timelines, clear expectations,
-            and responsive communication throughout your project.
-          </p>
+        </div>
+
+        <div class="icon-card">
+          <i class="fa-solid fa-file-invoice-dollar"></i>
+          <h3>Transparent Pricing</h3>
+        </div>
+
+        <div class="icon-card">
+          <i class="fa-solid fa-shield-halved"></i>
+          <h3>Licensed & Insured</h3>
         </div>
       </div>
-    </section>
 
-    <!-- ABOUT PREVIEW SECTION -->
-    <section class="about-preview">
-      <div class="about-container">
-        <h2>Why Homeowners Trust Pacific Edge Pools</h2>
-
-        <p>
-          With over a decade of experience in high-end pool construction and
-          plastering, Pacific Edge Pools brings luxury-grade craftsmanship to
-          homeowners across the Central Valley. Our team combines hands-on
-          expertise from elite markets like Carmel and Atherton with
-          professional project management backed by a degree from San Jose
-          State. We believe in honesty, clear communication, and delivering
-          remodels that stand the test of time. Your pool is our reputation —
-          and we treat it that way.
-        </p>
-        <a href="about.html" class="about-btn">Learn More About Us</a>
-      </div>
+      <a href="about.html" class="primary-btn">Learn More About Us</a>
     </section>
 
     <!-- SERVICE AREAS SECTION -->
