edit about me page

--- a/about.html
+++ b/about.html
@@ -1,19 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us | Pacific Edge Pools</title>
     <link rel="stylesheet" href="styles/about.css" />
-    <link   
+    <link
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
 
   <body>
-
-   <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <header>
       <nav class="navbar">
         <div class="logo">
@@ -28,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    
+
     <!-- HERO SECTION -->
     <section class="about-hero">
       <div class="about-hero-content">
@@ -73,14 +76,16 @@
 
         <div class="values-grid">
           <div class="value-card">
+            <i class="fa-solid fa-shield-halved"></i>
             <h3>Licensed & Insured</h3>
             <p>
-              Fully licensed California contractor (CA License #1144387),
-              bonded and insured for total peace of mind.
+              Fully licensed California contractor (CA License #1144387), bonded
+              and insured for total peace of mind.
             </p>
           </div>
 
           <div class="value-card">
+            <i class="fa-solid fa-gem"></i>
             <h3>Luxury-Level Experience</h3>
             <p>
               Experience gained in high-end markets means better finishes,
@@ -89,14 +94,16 @@
           </div>
 
           <div class="value-card">
+            <i class="fa-solid fa-comments"></i>
             <h3>Clear Communication</h3>
             <p>
-              You’ll always know what to expect — from timelines to materials
-              to project updates.
+              You’ll always know what to expect — from timelines to materials to
+              project updates.
             </p>
           </div>
 
           <div class="value-card">
+            <i class="fa-solid fa-hammer"></i>
             <h3>Quality That Lasts</h3>
             <p>
               We use proven materials and best practices to ensure durability,
@@ -108,38 +115,58 @@
     </section>
 
     <!-- PROCESS -->
-    <section class="about-section light">
+    <section class="about-process">
       <div class="about-container">
         <h2>Our Process</h2>
-        <p>
-          From consultation to completion, our process is built around clarity
-          and accountability.
+        <p class="process-intro">
+          A clear, proven approach designed to eliminate surprises and deliver
+          results you’ll love.
         </p>
 
-        <ul class="process-list">
-          <li><strong>Consultation:</strong> We assess your pool and goals.</li>
-          <li><strong>Planning:</strong> Clear scope, timeline, and materials.</li>
-          <li><strong>Execution:</strong> Skilled craftsmanship, clean job sites.</li>
-          <li><strong>Completion:</strong> Final walkthrough and satisfaction.</li>
-        </ul>
+        <div class="process-grid">
+          <div class="process-card">
+            <i class="fa-solid fa-phone-volume process-icon "></i>
+            <h3>1. Consultation</h3>
+            <p>
+              We evaluate your pool, listen to your goals, and offer expert
+              guidance.
+            </p>
+          </div>
+
+          <div class="process-card">
+            <i class="fa-solid fa-clipboard-list process-icon"></i>
+            <h3>2.Planning</h3>
+            <p>Clear scope, materials, pricing, and timelines—no guesswork.</p>
+          </div>
+
+          <div class="process-card">
+            <i class="fa-solid fa-person-digging process-icon"></i>
+            <h3>3. Execution</h3>
+            <p>
+              Skilled craftsmanship, clean job sites, and attention to detail.
+            </p>
+          </div>
+
+          <div class="process-card">
+            <i class="fa-solid fa-check-circle process-icon"></i>
+            <h3>4. Completion</h3>
+            <p>
+              Final walkthrough to ensure quality, durability, and satisfaction.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- CTA -->
-    <section class="about-cta">
-      <div class="about-container">
+    <section class="cta-banner">
         <h2>Ready to Transform Your Pool?</h2>
-        <p>
-          Let’s talk about your pool remodel and how we can bring it back to
-          life.
-        </p>
-        <a href="contact.html" class="cta-btn">Request a Free Quote</a>
-      </div>
+        <a href="quote.html" class="cta-btn">Get a Free Quote</a>
     </section>
 
     <!-- FOOTER -->
     <footer class="footer">
-         <p>&copy; 2026 Pacific Edge Pools. All rights reserved.</p>
-    </footer> 
+      <p>&copy; 2026 Pacific Edge Pools. All rights reserved.</p>
+    </footer>
   </body>
 </html>
