edit about me page icons

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
       <p class="services-intro">
         We specialize in pool remodeling, replastering, resurfacing, tile &
-        coping, and spa renovations for homeowners throughout the Central
-        Valley.
+        coping, and spa renovations for homeowners throughout the Central Valley
+        and Bay Area.
       </p>
 
       <div class="services-grid">
@@ -166,22 +166,12 @@
 
         <p>
           Pacific Edge Pools proudly provides pool remodeling and replastering
-          services throughout the Central Valley and surrounding communities.
+          services throughout the Central Valley and Northern California including Stanislaus, San Joaquin, Merced, Sacramento, Yolo, Alameda, Santa Clara, Contra Costa, San Mateo counties and many more.
         </p>
 
-        <ul class="areas-list">
-          <li><a href="modesto-pool-remodeling.html">Modesto</a></li>
-          <li><a href="turlock-pool-remodeling.html">Turlock</a></li>
-          <li><a href="patterson-pool-remodeling.html">Patterson</a></li>
-          <li><a href="ceres-pool-remodeling.html">Ceres</a></li>
-          <li><a href="tracy-pool-remodeling.html">Tracy</a></li>
-          <li><a href="manteca-pool-remodeling.html">Manteca</a></li>
-          <li><a href="stockton-pool-remodeling.html">Stockton</a></li>
-          <li><a href="los-banos-pool-remodeling.html">Los Banos</a></li>
-          <li><a href="merced-pool-remodeling.html">Merced</a></li>
-          <li><a href="sacramento-pool-remodeling.html">Sacramento</a></li>
-          <li><a href="elk-grove-pool-remodeling.html">Elk Grove</a></li>
-        </ul>
+        <a href="service-areas.html" class="areas-btn"
+          >View All Service Areas</a
+        >
       </div>
     </section>
 
