edit why chose us icons

--- a/index.html
+++ b/index.html
@@ -126,11 +126,6 @@
 
       <div class="icon-grid">
         <div class="icon-card">
-          <i class="fa-solid fa-pen-ruler"></i>
-          <h3>Custom Pool Design</h3>
-        </div>
-
-        <div class="icon-card">
           <i class="fa-solid fa-hammer"></i>
           <h3>Expert Craftsmanship</h3>
         </div>
@@ -166,7 +161,9 @@
 
         <p>
           Pacific Edge Pools proudly provides pool remodeling and replastering
-          services throughout the Central Valley and Northern California including Stanislaus, San Joaquin, Merced, Sacramento, Yolo, Alameda, Santa Clara, Contra Costa, San Mateo counties and many more.
+          services throughout the Central Valley and Northern California
+          including Stanislaus, San Joaquin, Merced, Sacramento, Yolo, Alameda,
+          Santa Clara, Contra Costa, San Mateo counties and many more.
         </p>
 
         <a href="service-areas.html" class="areas-btn"
