add service areas folder

--- a/service-areas.html
+++ b/service-areas.html
@@ -48,14 +48,46 @@
         <div class="area-group">
           <h2><i class="fa-solid fa-water"></i> Central Valley Counties</h2>
           <ul class="areas-list">
-            <li><a href="san-joaquin-county.html">San Joaquin County</a></li>
-            <li><a href="stanislaus-county.html">Stanislaus County</a></li>
-            <li><a href="merced-county.html">Merced County</a></li>
-            <li><a href="fresno-county.html">Fresno County</a></li>
-            <li><a href="madera-county.html">Madera County</a></li>
-            <li><a href="kings-county.html">Kings County</a></li>
-            <li><a href="tulare-county.html">Tulare County</a></li>
-            <li><a href="kern-county.html">Kern County</a></li>
+            <li>
+              <a href="/service-areas/central-valley/san-joaquin-county.html"
+                >San Joaquin County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/stanislaus-county.html"
+                >Stanislaus County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/merced-county.html"
+                >Merced County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/fresno-county.html"
+                >Fresno County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/madera-county.html"
+                >Madera County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/kings-county.html"
+                >Kings County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/tulare-county.html"
+                >Tulare County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/central-valley/kern-county.html"
+                >Kern County</a
+              >
+            </li>
           </ul>
         </div>
 
@@ -66,17 +98,64 @@
             Counties
           </h2>
           <ul class="areas-list">
-            <li><a href="sacramento-county.html">Sacramento County</a></li>
-            <li><a href="yolo-county.html">Yolo County</a></li>
-            <li><a href="placer-county.html">Placer County</a></li>
-            <li><a href="el-dorado-county.html">El Dorado County</a></li>
-            <li><a href="alameda-county.html">Alameda County</a></li>
-            <li><a href="contra-costa-county.html">Contra Costa County</a></li>
-            <li><a href="san-mateo-county.html">San Mateo County</a></li>
-            <li><a href="santa-clara-county.html">Santa Clara County</a></li>
-            <li><a href="solano-county.html">Solano County</a></li>
-            <li><a href="sonoma-county.html">Sonoma County</a></li>
-            <li><a href="napa-county.html">Napa County</a></li>
+            <li>
+              <a
+                href="/service-areas/northern-california/sacramento-county.html"
+                >Sacramento County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/yolo-county.html"
+                >Yolo County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/placer-county.html"
+                >Placer County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/el-dorado-county.html"
+                >El Dorado County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/alameda-county.html"
+                >Alameda County</a
+              >
+            </li>
+            <li>
+              <a
+                href="/service-areas/northern-california/contra-costa-county.html"
+                >Contra Costa County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/san-mateo-county.html"
+                >San Mateo County</a
+              >
+            </li>
+            <li>
+              <a
+                href="/service-areas/northern-california/santa-clara-county.html"
+                >Santa Clara County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/solano-county.html"
+                >Solano County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/sonoma-county.html"
+                >Sonoma County</a
+              >
+            </li>
+            <li>
+              <a href="/service-areas/northern-california/napa-county.html"
+                >Napa County</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -84,13 +163,13 @@
 
     <!--CTA-->
     <section class="cta-banner">
-        <h2>Ready to Transform Your Pool?</h2>
-        <a href="quote.html" class="cta-btn">Get a Free Quote</a>
+      <h2>Ready to Transform Your Pool?</h2>
+      <a href="quote.html" class="cta-btn">Get a Free Quote</a>
     </section>
 
     <!-- FOOTER -->
     <footer>
       <p>© 2026 Pacific Edge Pools. All rights reserved.</p>
-    </footer>   
+    </footer>
   </body>
 </html>
