--- a/service-areas/central-valley/san-joaquin-county.html
+++ b/service-areas/central-valley/san-joaquin-county.html
@@ -10,25 +10,25 @@
       name="description"
       content="Pacific Edge Pools offers top-quality remodeling, replastering, resurfacing, and spa renovations throughout San Joaquin County, CA."
 
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/service-areas.css" />
+    <link rel="stylesheet" href="../../styles/main.css" />
+    <link rel="stylesheet" href="../../styles/service-areas.css" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />  
-  </head>
+  </head> 
 
   <body>
     <!-- NAVBAR (same as homepage) -->
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../about.html">About</a></li>
+          <li><a href="../../services.html">Services</a></li>
+          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
