--- a/service-areas/central-valley/stanislaus-county.html
+++ b/service-areas/central-valley/stanislaus-county.html
@@ -11,8 +11,8 @@
       content="Pacific Edge Pools provides professional pool remodeling, replastering, resurfacing, and spa renovations throughout Stanislaus County, CA."
     />
 
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/service-areas.css" />
+    <link rel="stylesheet" href="../../styles/main.css" />
+    <link rel="stylesheet" href="../../styles/service-areas.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />  
   </head>
 
@@ -21,15 +21,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../about.html">About</a></li>
+          <li><a href="../../services.html">Services</a></li>
+          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
